chore: migrate project to Maven and clean up error handling